[tool.poetry]
name = "communiquer"
version = "0.1.0"
description = "Interface for the several tools that predict cells communications from Single-Cell RNA sequencing data"
authors = ["Vladimir Shitov <vladimirshitov98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
